[package]
name = "purple_exporter"
version = "1.0.1"
authors = ["Wayne Manselle <wayne@viridianforge.tech>", "Miguel Cervera <miguelcerverac@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Prometheus Exporter for PurpleAir Sensors"
homepage = "https://github.com/mikeki/purple_exporter"
repository = "https://github.com/mikeki/purple_exporter"
keywords = ["Purple Air", "Prometheus Exporter", "Air Quality"]
categories = ["prometheus", "metrics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.14"
pretty_env_logger = "0.4"
prometheus_exporter = "0.8"
reqwest = { version = "0.10", features = ["blocking"]}
url = "2.2.1"